kubernetes/infrastructure/rook-ceph/rook-ceph-cluster/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ceph-gateway
  namespace: rook-ceph
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: ceph-tls-gw
      hostname: "ceph.home.svc"
      allowedRoutes:
        namespaces:
          from: Same
      tls:
        certificateRefs:
          - kind: Secret
            name: ceph-gateway
