kubernetes/infrastructure/rook-ceph/rook-ceph-cluster/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ceph
  namespace: rook-ceph
spec:
  parentRefs:
    - kind: Gateway
      name: ceph-gateway
      namespace: rook-ceph
      sectionName: ceph-tls-gw
  hostnames:
    - ceph.home.svc
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
